; ModuleID = '/home/carl/AnghaBench/linux/drivers/gnss/extr_serial.c_gnss_serial_write_raw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gnss/extr_serial.c_gnss_serial_write_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gnss_device = type { i32 }
%struct.gnss_serial = type { %struct.serdev_device* }
%struct.serdev_device = type { i32 }

@MAX_SCHEDULE_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gnss_device*, i8*, i64)* @gnss_serial_write_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gnss_serial_write_raw(%struct.gnss_device* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.gnss_device*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.gnss_serial*, align 8
  %9 = alloca %struct.serdev_device*, align 8
  %10 = alloca i32, align 4
  store %struct.gnss_device* %0, %struct.gnss_device** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load %struct.gnss_device*, %struct.gnss_device** %5, align 8
  %12 = call %struct.gnss_serial* @gnss_get_drvdata(%struct.gnss_device* %11)
  store %struct.gnss_serial* %12, %struct.gnss_serial** %8, align 8
  %13 = load %struct.gnss_serial*, %struct.gnss_serial** %8, align 8
  %14 = getelementptr inbounds %struct.gnss_serial, %struct.gnss_serial* %13, i32 0, i32 0
  %15 = load %struct.serdev_device*, %struct.serdev_device** %14, align 8
  store %struct.serdev_device* %15, %struct.serdev_device** %9, align 8
  %16 = load %struct.serdev_device*, %struct.serdev_device** %9, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = load i32, i32* @MAX_SCHEDULE_TIMEOUT, align 4
  %20 = call i32 @serdev_device_write(%struct.serdev_device* %16, i8* %17, i64 %18, i32 %19)
  store i32 %20, i32* %10, align 4
  %21 = load i32, i32* %10, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %28, label %23

23:                                               ; preds = %3
  %24 = load i32, i32* %10, align 4
  %25 = sext i32 %24 to i64
  %26 = load i64, i64* %7, align 8
  %27 = icmp ult i64 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %23, %3
  %29 = load i32, i32* %10, align 4
  store i32 %29, i32* %4, align 4
  br label %35

30:                                               ; preds = %23
  %31 = load %struct.serdev_device*, %struct.serdev_device** %9, align 8
  %32 = call i32 @serdev_device_wait_until_sent(%struct.serdev_device* %31, i32 0)
  %33 = load i64, i64* %7, align 8
  %34 = trunc i64 %33 to i32
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %30, %28
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local %struct.gnss_serial* @gnss_get_drvdata(%struct.gnss_device*) #1

declare dso_local i32 @serdev_device_write(%struct.serdev_device*, i8*, i64, i32) #1

declare dso_local i32 @serdev_device_wait_until_sent(%struct.serdev_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
